<resources>
    <string name="app_name">Greb</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_auth">Auth</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_admin_landing">AdminLanding</string>
    <string name="let_s_go">Let\'s Go !</string>
    <string name="where_are_you_now">Where Are You Now</string>
    <string name="your_destination">Your Destination</string>
    <string name="estimated_arrival_time">Estimated Arrival Time</string>
    <string name="number_of_passengers">Number of Passengers</string>

    <string-array name="driverName_txt">
        <item>Chan Ching Chong</item>
        <item>Chin Ling Long</item>
        <item>Ang Ang Tan</item>
        <item>Pai Da Xing</item>
        <item>Pai Da Xing</item>
        <item>Pai Da Xing</item>
    </string-array>
    <string-array name="carCapacity_txt">
        <item>Capacity:</item>
        <item>Capacity:</item>
        <item>Capacity:</item>
        <item>Capacity:</item>
        <item>Pai Da Xing</item>
        <item>Pai Da Xing</item>
    </string-array>
    <string-array name="eatTime_txt">
        <item>Estimated Arrival Time:</item>
        <item>Estimated Arrival Time:</item>
        <item>Estimated Arrival Time:</item>
        <item>Estimated Arrival Time:</item>
        <item>Pai Da Xing</item>
        <item>Pai Da Xing</item>
    </string-array>
    <string-array name="startPoint_txt">
        <item>Starting Point:</item>
        <item>Starting Point:</item>
        <item>Starting Point:</item>
        <item>Starting Point:</item>
        <item>Pai Da Xing</item>
        <item>Pai Da Xing</item>
    </string-array>
    <string-array name="destination_txt">
        <item>Destination:</item>
        <item>Destination:</item>
        <item>Destination:</item>
        <item>Destination:</item>
        <item>Pai Da Xing</item>
        <item>Pai Da Xing</item>
    </string-array>

</resources>