<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF6FE">
    

    <EditText
        android:id="@+id/currentTime"
        android:layout_width="190dp"
        android:layout_height="78dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:inputType="time"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="243dp"
        android:layout_height="44dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/currentTime"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        tools:layout_editor_absoluteX="84dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:height="48dp"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="?android:attr/actionModeWebSearchDrawable"
            android:drawablePadding="10dp"
            android:drawableTint="#666631"
            android:hint="@string/where_are_you_now"
            android:textColorHint="#666631"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="243dp"
        android:layout_height="44dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        tools:layout_editor_absoluteX="84dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/icons8_location_24"
            android:drawablePadding="25dp"
            android:drawableTint="#666631"
            android:hint="@string/your_destination"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="243dp"
        android:layout_height="44dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        tools:layout_editor_absoluteX="84dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:drawableTint="#666631"
            android:hint="@string/number_of_passengers"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="243dp"
        android:layout_height="44dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        tools:layout_editor_absoluteX="84dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/icons8_clock_24"
            android:drawablePadding="10dp"
            android:drawableTint="#666631"
            android:hint="@string/estimated_arrival_time"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/letsGoButton"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="#164976"
        android:text="@string/let_s_go"
        android:textColor="#ffffff"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="213dp"
        android:layout_height="145dp"
        android:layout_marginStart="-30dp"
        android:rotationY="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mgid_arc_imageassetref_nick_removebg_preview"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>